Reformatted java code into Google Format Java.